Fix onClick event propagation for non-static grid items.

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+  pointer-events: none;
 }
 
 .react-grid-item.react-grid-placeholder.placeholder-resizing {
